<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactSettingsActivity">

  <TextView
      android:id="@+id/textView1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_alignParentTop="true"
      android:layout_marginLeft="15dp"
      android:layout_marginTop="15dp"
      android:text="@string/sort_contact_by"
      android:textAppearance="?android:attr/textAppearanceMedium"/>

  <RadioGroup
      android:id="@+id/radioGroup1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_below="@+id/textView1"
      android:layout_marginLeft="35dp"
      android:layout_marginTop="10dp">

    <RadioButton
        android:id="@+id/radioName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/name_settings"/>

    <RadioButton
        android:id="@+id/radioCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city_settings"/>

    <RadioButton
        android:id="@+id/radioBirthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birthday_settings"/>

  </RadioGroup>

  <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_below="@+id/radioGroup1"
      android:layout_marginLeft="15dp"
      android:layout_marginTop="15dp"
      android:text="@string/sort_order"
      android:textAppearance="?android:attr/textAppearanceMedium"/>

  <RadioGroup
      android:id="@+id/radioGroup2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_below="@+id/textView2"
      android:layout_marginLeft="35dp"
      android:layout_marginTop="10dp">

    <RadioButton
        android:id="@+id/radioAscending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/ascending"/>

    <RadioButton
        android:id="@+id/radioDescending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descending"/>

  </RadioGroup>


  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/navbar"
      android:layout_alignParentBottom="true"
      android:layout_centerHorizontal="true"
      android:background="@color/navbar_background"
      android:gravity="center_horizontal">

    <ImageButton
        android:id="@+id/imageButtonList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/imageButtonMap"
        android:layout_marginRight="20dp"
        android:contentDescription="@string/contact_list_button"
        android:src="@drawable/contact_list_icon"/>

    <ImageButton
        android:id="@+id/imageButtonMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/contact_map_icon"/>

    <ImageButton
        android:id="@+id/imageButtonSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@id/imageButtonMap"
        android:src="@drawable/contact_settings_icon"
        />
  </RelativeLayout>
</RelativeLayout>