<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/toolbar_background">

        <ToggleButton
            android:id="@+id/toggleButtonEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:text="@string/toggle_button" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:text="@string/save"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/navbar"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/name" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textContact"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="14"
                android:imeOptions="actionNext"
                android:inputType="textCapWords">

                <requestFocus />

            </EditText>

            <TextView
                android:id="@+id/textAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editName"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/address" />

            <EditText
                android:id="@+id/editAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textAddress"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="14"
                android:imeOptions="actionNext"
                android:inputType="textPostalAddress" />

            <EditText
                android:id="@+id/editCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editAddress"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:ems="8"
                android:hint="@string/city"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:nextFocusDown="@+id/editState" />

            <EditText
                android:id="@+id/editState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/editCity"
                android:layout_toEndOf="@+id/editCity"
                android:ems="2"
                android:imeOptions="actionNext"
                android:inputType="textCapCharacters"
                android:nextFocusDown="@+id/editZipcode" />

            <EditText
                android:id="@+id/editZipcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/editState"
                android:layout_toEndOf="@+id/editState"
                android:ems="4"
                android:imeOptions="actionNext"
                android:inputType="numberSigned"
                android:maxLength="5"
                android:nextFocusDown="@+id/editHome" />

            <TextView
                android:id="@+id/textHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editCity"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/home_phone" />

            <EditText
                android:id="@+id/editHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textHome"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:ems="7"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="14"
                android:nextFocusDown="@+id/editCell" />

            <TextView
                android:id="@+id/textCell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/editCell"
                android:layout_alignBottom="@+id/textHome"
                android:text="@string/cell_phone" />

            <EditText
                android:id="@+id/editCell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/editHome"
                android:layout_toEndOf="@+id/editHome"
                android:ems="7"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="14"
                android:nextFocusDown="@+id/editEmail" />

            <TextView
                android:id="@+id/textEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editHome"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/email_address" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textEmail"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:ems="13"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/textBday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editEmail"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:paddingBottom="25dp"
                android:text="@string/birthday" />

            <TextView
                android:id="@+id/textBirthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textBday"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/textBday"
                android:paddingBottom="25dp"
                android:text="@string/birthdate" />

            <Button
                android:id="@+id/btnBirthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textBirthday"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:text="@string/change_birthday" />

        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/navbar_background"
        android:gravity="center_horizontal">

        <ImageButton
            android:id="@+id/imageButtonList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:layout_toLeftOf="@+id/imageButtonMap"
            android:contentDescription="A button for Contact List"
            android:src="@drawable/contact_list_icon" />

        <ImageButton
            android:id="@+id/imageButtonMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/contact_map_icon" />

        <ImageButton
            android:id="@+id/imageButtonSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/imageButtonMap"
            android:src="@drawable/contact_settings_icon" />
    </RelativeLayout>

</RelativeLayout>